--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-image-picker": "^0.28.1",
     "react-navigation": "^3.9.1"
   },
   "devDependencies": {
